--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>Tasks Javascript</h1>
     </main>
   </body>
-  <script src="/js/task-1.js"></script>
-  <script src="/js/task-2.js"></script>
-  <script src="/js/task-3.js"></script>
+  <script src="js/task-1.js"></script>
+  <script src="js/task-2.js"></script>
+  <script src="js/task-3.js"></script>
 </html>
