Fixed script in html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <main>
       <h1>Tasks Javascript</h1>
     </main>
-    <script src="js/task-1.js"></script>
-    <script src="js/task-2.js"></script>
-    <script src="js/task-3.js"></script>
+    <script src="./js/task-1.js"></script>
+    <script src="./js/task-2.js"></script>
+    <script src="./js/task-3.js"></script>
   </body>
 </html>
